plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
    id 'org.spongepowered.mixin' version '0.7.+'
}

version = '2.0.0'
group = 'com.foxyas.changed_addon'
archivesBaseName = 'changed_addon'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'parchment', version: '2022.11.06-1.18.2'

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                changed_addon {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                changed_addon {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            args '--mod', 'changed_addon', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                changed_addon {
                    source sourceSets.main
                }
            }
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
	// Mod Location
    flatDir {
        dirs 'libs'
    }

    maven {
        url "https://cursemaven.com"
    }

    maven {
        name = "Changed"
        url = "https://raw.githubusercontent.com/LtxProgrammer/Changed-Minecraft-Mod/1.18.2-rel/mcmodsrepo/"
    }

    /*maven {
        name = "Changed_Local_file"
        url uri("${rootProject.projectDir}/libs")
    }*/


  /* maven {
        // location of the maven that hosts JEI files
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }*/
}

mixin {
    add sourceSets.main, "changed_addon.refmap.json"
    config "changed_addon.mixins.json"
    env {
        remapRefMap = true
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.18.2-40.3.0' //Forge Version

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.4.1")) {
        jarJar.ranged(it, "[0.4.1,)")
    }

  //implementation fg.deobf('net.ltxprogrammer.changed:Changed-m1.18.2-f40.2.0:v0.14b') //Changed Local File
    implementation fg.deobf("net.ltxprogrammer.changed:Changed-m1.18.2-f40.2.0:v0.14.1c") {
        changing = true
    }//Changed

    implementation fg.deobf("dev.tr7zw:notenoughanimations-forge-1.7.0-mc1.18.2:1.7.0")
    implementation fg.deobf("dev.tr7zw:firstperson-forge-2.3.2-mc1.18.2:2.3.2")
    implementation fg.deobf("curse.maven:playeranimator-658587:4418152") // Forge 1.18.2 v1.0.2
    //compileOnly
    //implementation fg.deobf("curse.maven:tinkers-construct-74072:5748362")
    //implementation fg.deobf("curse.maven:mantle-74924:5979027")

    //runtimeOnly fg.deobf("curse.maven:advanced-xray-256256:3712732")	//Xray BLOCKS
    //runtimeOnly fg.deobf("curse.maven:lightspeedmod-821790:4594803") //Speed Up The Start of The Game
    //runtimeOnly fg.deobf("curse.maven:forge-carpet-547361:3930877") //Player Summon
    //runtimeOnly fg.deobf("curse.maven:embeddium-908741:5322305") //Fps Boost
    //runtimeOnly fg.deobf("curse.maven:forgetmechunk-forge-632973:4041502") //Fps Boost
    //runtimeOnly fg.deobf("curse.maven:oculus-581495:4578744") //Shaders :D [TURN THIS OFF WHEN RUNNING A SERVER]
    //runtimeOnly fg.deobf("curse.maven:custom-player-models-439870:4840534") //Custom Player Models
    //runtimeOnly fg.deobf("curse.maven:spark-361579:4505375") // Spark
    //runtimeOnly fg.deobf("curse.maven:hardcore-revival-274036:3830873") //HardCore Survival
    //runtimeOnly fg.deobf("curse.maven:balm-531761:4442615") //Balm API need for HardCore Survival
    //runtimeOnly fg.deobf("curse.maven:appleskin-248787:4770822") //AppleSkin
    //runtimeOnly fg.deobf("curse.maven:catalogue-459701:3803098") //Catalogue (Better Mod menu)
    //runtimeOnly fg.deobf("curse.maven:configured-457570:4462832") //Configured (Config options in game)
    //runtimeOnly fg.deobf("curse.maven:carry-on-274259:5141758") //Carry On mod
    //runtimeOnly fg.deobf("curse.maven:in-game-account-switcher-232676:4589915") //ReAuth

  //implementation fg.deobf("curse.maven:roughly-enough-items-310111:4774383") //Jei But better
  //implementation fg.deobf("curse.maven:cloth-config-348521:4633387") // REI mod dependence
  //implementation fg.deobf("curse.maven:architectury-api-419699:4521465") //REI mod dependence

    //compileOnly fg.deobf("mezz.jei:jei-1.18.2:9.7.2.281:api") //Jei Api
    //runtimeOnly fg.deobf("mezz.jei:jei-1.18.2:9.7.2.281") //Jei Mod
    //implementation files("libs/Changed-m1.18.2-v0.14")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// Example for how to get properties into the manifest for reading at runtime.
jar {
    manifest {
        attributes([
                "Specification-Title"     : "changed_addon",
                "Specification-Vendor"    : "Foxyas",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "Foxyas",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

// Example configuration to allow publishing using the maven-publish plugin
// This is the preferred method to reobfuscate your jar file
jar.finalizedBy('reobfJar')
// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
// publish.dependsOn('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

apply from: 'mcreator.gradle'